bugfix: headers naming

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_API_SRV = http://api.mesto-express-project.nomoredomainsclub.ru
+REACT_APP_API_SRV = https://api.mesto-express-project.nomoredomainsclub.ru
